Use Character.valueOf instead of deprecated Character constructor